Fixed the redirection issue

--- a/inventory/templates/inventory/navigation.html
+++ b/inventory/templates/inventory/navigation.html
@@ -12,7 +12,10 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'logout' %}">Sign Out</a>
+						<form method="post" action="{% url 'logout' %}" style="display:inline;">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-link">Sign Out</button>
+    </form>
 					</li>
 				{% else %}
 					<li class="nav-item">
